force-app/main/default/objects/Affiliate__c/Affiliate__c.object-meta.xml
<CustomObject>
    <label>שותפים</label>
    <nameField>
        <label>שותפים Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>