force-app/main/default/objects/Affiliate__c/fields/Banner__c.field-meta.xml
<CustomField>
    <fullName>Banner__c</fullName>
    <formula>&apos;http://www.magnus.co.il/Satellite/Order_service?aff=&apos;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>באנר</label>
    <type>Text</type>
</CustomField>