force-app/main/default/objects/Affiliate__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>תקנון</label>
    <type>Checkbox</type>
</CustomField>