force-app/main/default/objects/Affiliate__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>שם משתמש</label>
    <length>255</length>
    <type>Text</type>
</CustomField>