force-app/main/default/objects/Affiliate__c/validationRules/Only_English_in_field_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_English_in_field_Name</fullName>
    <active>true</active>
    <description>This field only accept characters in English and space</description>
    <errorConditionFormula>NOT(REGEX( Name, &quot;[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>This field only accept characters in English.</errorMessage>
</ValidationRule>