force-app/main/default/objects/Affiliate__c/listViews/All_Affiliates.listView-meta.xml
<ListView>
    <fullName>All_Affiliates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Affiliates</label>
</ListView>